--- a/.env
+++ b/.env
@@ -18,15 +18,9 @@ APP_ENV=dev
 APP_SECRET=70af597f869cd8b2adfd2e0c4c636b22
 ###< symfony/framework-bundle ###
 
+BOOK_URL="https://run.mocky.io/v3/20738b76-f468-41f7-b94a-719cab862a1f?mocky-delay=3000ms"
+BOOK_TTL=300
+
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
-
-###> doctrine/doctrine-bundle ###
-# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-#
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
-###< doctrine/doctrine-bundle ###
